--- a/hackernews/newspost/templates/newspost/post.html
+++ b/hackernews/newspost/templates/newspost/post.html
@@ -7,19 +7,24 @@
         <tr><td bgcolor="#ff6600"><table border="0" cellpadding="0" cellspacing="0" width="100%" style="padding:2px"><tr><td style="width:18px;padding-right:4px"><a href="index.html"><img src="{%static 'newspost/y18.gif'%}" width="18" height="18" style="border:1px white solid;"></a></td>
                   <td style="line-height:12pt; height:10px;"><span class="pagetop"><b class="hnname"><a href="news.html">Rishi News</a></b>
               <a href="newest.html">new</a> | <a href="front.html">past</a> | <a href="newcomments.html">comments</a> | <a href="ask.html">ask</a> | <a href="show.html">show</a> | <a href="jobs.html">jobs</a> | <a href="{% url 'newspost:addPost' %}">submit</a>            </span></td><td style="text-align:right;padding-right:4px;"><span class="pagetop">
-                {% if  user.username %}
+                {% if  user.is_authenticated %}
                               <a href="{% url 'newspost:index' %}">{{ user.username }}</a>
                           </span></td>
               </tr></table></td></tr>
                 {% else %}
-              <a href="{% url 'newspost:registrationPage' %}">login</a>
+              <a href="{% url 'newspost:register1
+              ' %}">login</a>
                           </span></td>
               </tr></table></td></tr>
               {% endif %}
 <tr id="pagespace" title="L.A.’s Elite on Edge as Prosecutors Pursue More Parents in Admissions Scandal" style="height:10px"></tr><tr><td><table class="fatitem" border="0">
         <tr class='athing' id='19802558'>
-      <td align="right" valign="top" class="title"><span class="rank"></span></td>      <td valign="top" class="votelinks"><center><a id='up_19802558' href='https://news.ycombinator.com/vote?id=19802558&amp;how=up&amp;goto=item%3Fid%3D19802558'><div class='votearrow' title='upvote'></div></a></center></td><td class="title"><a href="https://www.nytimes.com/2019/05/01/us/college-admissions-scandal.html" class="storylink">{{ post.post_title }}</a><span class="sitebit comhead"> (<a href="from55cf.html?site=nytimes.com"><span class="sitestr">{{ post.post_link }}</span></a>)</span></td></tr><tr><td colspan="2"></td><td class="subtext">
-        <span class="score" id="score_19802558">111 points</span> by <a href="userc06b.html?id=petethomas" class="hnuser">{{ post.user_id.username }}</a> <span class="age"><a href="itemd17d.html?id=19802558">{{ post.timestamp }}</a></span> <span id="unv_19802558"></span> | <a href="hide28d9.html?id=19802558&amp;goto=item%3Fid%3D19802558">hide</a> | <a href="https://hn.algolia.com/?query=L.A.%E2%80%99s%20Elite%20on%20Edge%20as%20Prosecutors%20Pursue%20More%20Parents%20in%20Admissions%20Scandal&amp;sort=byDate&amp;dateRange=all&amp;type=story&amp;storyText=false&amp;prefix&amp;page=0" class="hnpast">past</a> | <a href="https://www.google.com/search?q=L.A.%E2%80%99s%20Elite%20on%20Edge%20as%20Prosecutors%20Pursue%20More%20Parents%20in%20Admissions%20Scandal">web</a> | <a href="https://news.ycombinator.com/fave?id=19802558&amp;auth=c0bcdd9b4e3db0ea582c60589097a8b5d88ddf01">favorite</a> | <a href="https://news.ycombinator.com/item?id=19802558">{{post.commented_post.count }}&nbsp;comments</a>              </td></tr>
+      <td align="right" valign="top" class="title"><span class="rank"></span></td>      <td valign="top" class="votelinks"><center>
+        {% if user.is_authenticated %}
+        <a id='up_19802558' href="{% url 'newspost:upvote_post' post.id %}" >
+        {% endif %}
+        <div class='votearrow' title='upvote'></div></a></center></td><td class="title"><a href="https://www.nytimes.com/2019/05/01/us/college-admissions-scandal.html" class="storylink">{{ post.post_title }}</a><span class="sitebit comhead"> (<a href="from55cf.html?site=nytimes.com"><span class="sitestr">{{ post.post_link }}</span></a>)</span></td></tr><tr><td colspan="2"></td><td class="subtext">
+        <span class="score" id="score_19802558">{{ post.post_upvote.count }} points</span> by <a href="userc06b.html?id=petethomas" class="hnuser">{{ post.user_id.username }}</a> <span class="age"><a href="itemd17d.html?id=19802558">{{ post.timestamp }}</a></span> <span id="unv_19802558"></span> | <a href="hide28d9.html?id=19802558&amp;goto=item%3Fid%3D19802558">hide</a> | <a href="https://hn.algolia.com/?query=L.A.%E2%80%99s%20Elite%20on%20Edge%20as%20Prosecutors%20Pursue%20More%20Parents%20in%20Admissions%20Scandal&amp;sort=byDate&amp;dateRange=all&amp;type=story&amp;storyText=false&amp;prefix&amp;page=0" class="hnpast">past</a> | <a href="https://www.google.com/search?q=L.A.%E2%80%99s%20Elite%20on%20Edge%20as%20Prosecutors%20Pursue%20More%20Parents%20in%20Admissions%20Scandal">web</a> | <a href="https://news.ycombinator.com/fave?id=19802558&amp;auth=c0bcdd9b4e3db0ea582c60589097a8b5d88ddf01">favorite</a> | <a href="https://news.ycombinator.com/item?id=19802558">{{post.commented_post.count }}&nbsp;comments</a>              </td></tr>
             <tr style="height:10px"></tr><tr><td colspan="2"></td><td>
           <form method="post" action="{% url 'newspost:post' post.id %}"><input type="hidden" name="parent" value="19802558"><input type="hidden" name="goto" value="item?id=19802558"><input type="hidden" name="text" value="b80d306eba81c7eb284bac147320dbcbc929e451"><textarea name="text" rows="6" cols="60">{{ form.visible_fields.label_tag }}</textarea>
           {% csrf_token %}
@@ -32,7 +37,12 @@
 
 
             <tr class='athing comtr ' id='19803117'><td>
-            <table border='0'>  <tr>    <td class='ind'><img src="{% static 's.gif'%}" height="1" width="{% widthratio 40 1 comment.level_count %}"></td><td valign="top" class="votelinks"><center><a id='up_19803117' href='https://news.ycombinator.com/vote?id=19803117&amp;how=up&amp;goto=item%3Fid%3D19802558'><div class='votearrow' title='upvote'></div></a></center></td><td class="default"><div style="margin-top:2px; margin-bottom:-10px;"><span class="comhead">
+            <table border='0'>  <tr>    <td class='ind'><img src="{% static 's.gif'%}" height="1" width="{% widthratio 40 1 comment.level_count %}"></td><td valign="top" class="votelinks"><center>
+              {% if user.is_authenticated %}
+              <a id='up_19802558' href="{% url 'newspost:upvote_comment' comment.id %}" >
+              {% endif %}
+              <div class='votearrow' title='upvote'></div></a></center></td><td class="default"><div style="margin-top:2px; margin-bottom:-10px;"><span class="comhead">
+              <span class="score" id="score_19802558">{{ comment.comment_upvote.count }} points</span> by
           <a href="https://news.ycombinator.com/user?id=darawk" class="hnuser">{{comment.user_id.username }}</a> <span class="age"><a href="https://news.ycombinator.com/item?id=19803117">{{ comment.timestamp }}</a></span> <span id="unv_19803117"></span><span class="par"></span> <a class="togg" n="8" href="javascript:void(0)" onclick="return toggle(event, 19803117)"></a>          <span class='storyon'></span>
                   </span></div><br><div class="comment">
                   <span class="commtext c00">{{ comment.text }}</span>
