--- a/hackernews/newspost/templates/newspost/post.html
+++ b/hackernews/newspost/templates/newspost/post.html
@@ -1,74 +1,74 @@
-<html op="item">
-<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-{% load static %}
-<head><meta name="referrer" content="origin"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="stylesheet" type="text/css" href="{% static 'newspost/newsbee7.css' %}">
-            <link rel="shortcut icon" href="favicon.ico">
-        <title>t</title></head><body><center><table id="hnmain" border="0" cellpadding="0" cellspacing="0" width="85%" bgcolor="#f6f6ef">
-        <tr><td bgcolor="#ff6600"><table border="0" cellpadding="0" cellspacing="0" width="100%" style="padding:2px"><tr><td style="width:18px;padding-right:4px"><a href="index.html"><img src="{%static 'newspost/y18.gif'%}" width="18" height="18" style="border:1px white solid;"></a></td>
-                  <td style="line-height:12pt; height:10px;"><span class="pagetop"><b class="hnname"><a href="news.html">Rishi News</a></b>
-              <a href="newest.html">new</a> | <a href="front.html">past</a> | <a href="newcomments.html">comments</a> | <a href="ask.html">ask</a> | <a href="show.html">show</a> | <a href="jobs.html">jobs</a> | <a href="{% url 'newspost:addPost' %}">submit</a>            </span></td><td style="text-align:right;padding-right:4px;"><span class="pagetop">
-                {% if  user.is_authenticated %}
-                              <a href="{% url 'newspost:index' %}">{{ user.username }}</a>
-                          </span></td>
-              </tr></table></td></tr>
-                {% else %}
-              <a href="{% url 'newspost:register1
-              ' %}">login</a>
-                          </span></td>
-              </tr></table></td></tr>
-              {% endif %}
-<tr id="pagespace" title="L.A.’s Elite on Edge as Prosecutors Pursue More Parents in Admissions Scandal" style="height:10px"></tr><tr><td><table class="fatitem" border="0">
-        <tr class='athing' id='19802558'>
-      <td align="right" valign="top" class="title"><span class="rank"></span></td>      <td valign="top" class="votelinks"><center>
-        {% if user.is_authenticated %}
-        <a id='up_19802558' href="{% url 'newspost:upvote_post' post.id %}" >
-        {% endif %}
-        <div class='votearrow' title='upvote'></div></a></center></td><td class="title"><a href="https://www.nytimes.com/2019/05/01/us/college-admissions-scandal.html" class="storylink">{{ post.post_title }}</a><span class="sitebit comhead"> (<a href="from55cf.html?site=nytimes.com"><span class="sitestr">{{ post.post_link }}</span></a>)</span></td></tr><tr><td colspan="2"></td><td class="subtext">
-        <span class="score" id="score_19802558">{{ post.post_upvote.count }} points</span> by <a href="userc06b.html?id=petethomas" class="hnuser">{{ post.user_id.username }}</a> <span class="age"><a href="itemd17d.html?id=19802558">{{ post.timestamp }}</a></span> <span id="unv_19802558"></span> | <a href="hide28d9.html?id=19802558&amp;goto=item%3Fid%3D19802558">hide</a> | <a href="https://hn.algolia.com/?query=L.A.%E2%80%99s%20Elite%20on%20Edge%20as%20Prosecutors%20Pursue%20More%20Parents%20in%20Admissions%20Scandal&amp;sort=byDate&amp;dateRange=all&amp;type=story&amp;storyText=false&amp;prefix&amp;page=0" class="hnpast">past</a> | <a href="https://www.google.com/search?q=L.A.%E2%80%99s%20Elite%20on%20Edge%20as%20Prosecutors%20Pursue%20More%20Parents%20in%20Admissions%20Scandal">web</a> | <a href="https://news.ycombinator.com/fave?id=19802558&amp;auth=c0bcdd9b4e3db0ea582c60589097a8b5d88ddf01">favorite</a> | <a href="https://news.ycombinator.com/item?id=19802558">{{post.commented_post.count }}&nbsp;comments</a>              </td></tr>
+{% extends "newspost/base.html" %} {% load static %} {% block content %}
+
+<tr id="pagespace" title="L.A.’s Elite on Edge as Prosecutors Pursue More Parents in Admissions Scandal" style="height:10px"></tr>
+<tr>
+    <td>
+        <table class="fatitem" border="0">
+            <tr class='athing' id='19802558'>
+                <td align="right" valign="top" class="title"><span class="rank"></span></td>
+                <td valign="top" class="votelinks">
+                    <center>
+                        {% if user.is_authenticated %}
+                        <button type="submit" id="upvotes"  data-catid="{{ post.id }}" value="{{ post.id }}">
+                          ^
+                        </button>
+                        {% endif %}
+                    </center>
+                </td>
+                <td class="title">
+                    <a href="{% url 'newspost:post' post.id %}" class="storylink">{{ post.post_title }}</a><span class="sitebit comhead"> (<a href="{% url 'newspost:post' post.id %}"><span class="sitestr">{{ post.post_link }}</span></a>)</span>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2"></td>
+                <td class="subtext">
+                    <span class="score" id="upvote_count">{{ post.post_upvote.count }}</span><span> points</span> by <a href="{% url 'newspost:post' post.id %}" class="hnuser">{{ post.user_id.username }}</a> <span class="age"><a href="{% url 'newspost:post' post.id %}">{{ post.timestamp }}</a></span> <span id="unv_19802558"></span> | <a href="{% url 'newspost:post' post.id %}">{{post.commented_post.count }}&nbsp;comments</a>              </td></tr>
             <tr style="height:10px"></tr><tr><td colspan="2"></td><td>
           <form method="post" action="{% url 'newspost:post' post.id %}"><input type="hidden" name="parent" value="19802558"><input type="hidden" name="goto" value="item?id=19802558"><input type="hidden" name="text" value="b80d306eba81c7eb284bac147320dbcbc929e451"><textarea name="text" rows="6" cols="60">{{ form.visible_fields.label_tag }}</textarea>
           {% csrf_token %}
           <!-- {{ form.as_p }} -->
-                <br><br><input type="submit" value="Submit"></form>
+                <br><br><input type="submit" value="Submit">
+                {% if error %}
+  <div class="form-group has-danger">
+          <div class="form-control-feedback">{{error}}</div>
+        </div>
+  {% endif %}</form>
       </td></tr>
   </table><br><br>
+
   <table border="0" class='comment-tree'>
-            {% for comment in comments %}
-
-
-            <tr class='athing comtr ' id='19803117'><td>
-            <table border='0'>  <tr>    <td class='ind'><img src="{% static 's.gif'%}" height="1" width="{% widthratio 40 1 comment.level_count %}"></td><td valign="top" class="votelinks"><center>
+        {% for comment in comments %}
+            {% for branch, obj in comment.as_tree %}
+                {% if obj %}
+                        <tr class='athing comtr ' id='19803117'><td>
+            <table border='0'>  <tr>    <td class='ind'><img src="{% static 'newspost/s.gif'%}" height="1" width="{% widthratio 40 1 obj.level_count %}"></td><td valign="top" class="votelinks"><center>
               {% if user.is_authenticated %}
-              <a id='up_19802558' href="{% url 'newspost:upvote_comment' comment.id %}" >
-              {% endif %}
-              <div class='votearrow' title='upvote'></div></a></center></td><td class="default"><div style="margin-top:2px; margin-bottom:-10px;"><span class="comhead">
-              <span class="score" id="score_19802558">{{ comment.comment_upvote.count }} points</span> by
-          <a href="https://news.ycombinator.com/user?id=darawk" class="hnuser">{{comment.user_id.username }}</a> <span class="age"><a href="https://news.ycombinator.com/item?id=19803117">{{ comment.timestamp }}</a></span> <span id="unv_19803117"></span><span class="par"></span> <a class="togg" n="8" href="javascript:void(0)" onclick="return toggle(event, 19803117)"></a>          <span class='storyon'></span>
+              <button type="submit" id="upvote{{ obj.id }}" class='votearrow' data-catid="{{ obj.id }}" value="{{ obj.id }}"></button>
+              {% endif %}</center></td><td class="default"><div style="margin-top:2px; margin-bottom:-10px;"><span class="comhead">
+              <span class="score" id="comment-count{{ obj.id }}">{{ obj.comment_upvote.count }} points</span> by
+          <a href="{% url 'newspost:post' post.id %}" class=>{{obj.user_id.username }}</a> <span class="age"><a href="{% url 'newspost:post' post.id %}">{{ obj.timestamp }}</a></span> <span id="unv_19803117"></span><span class="par"></span> <a class="togg" n="8" href="javascript:void(0)" onclick="return toggle(event, 19803117)"></a>          <span class='storyon'></span>
                   </span></div><br><div class="comment">
-                  <span class="commtext c00">{{ comment.text }}</span>
+                  <span class="commtext c00">{{ obj.text }}</span>
               <div class='reply'>        <p><font size="1">
-                      <u><a href="{% url 'newspost:reply' comment.id %}">reply</a></u>
+                      <u><a href="{% url 'newspost:reply' obj.id %}">reply</a></u>
                   </font>
       </div></div></td></tr>
       </table></td></tr>
+                    {% if branch %}
+                    {% else %}
+                    {% endif %}
+                {% else %}
+                    {% if branch %}
+                    {% endif %}
+                {% endif %}
+            {% endfor %}
+        {% endfor %}
 
-
-      {% endfor %}
               </table>
       <br><br>
   </td></tr>
-<tr><td><img src="https://news.ycombinator.com/s.gif" height="10" width="0"><table width="100%" cellspacing="0" cellpadding="1"><tr><td bgcolor="#ff6600"></td></tr></table><br><center><span class="yclinks"><a href="https://news.ycombinator.com/newsguidelines.html">Guidelines</a>
-        | <a href="https://news.ycombinator.com/newsfaq.html">FAQ</a>
-        | <a href="mailto:hn@ycombinator.com">Support</a>
-        | <a href="https://github.com/HackerNews/API">API</a>
-        | <a href="https://news.ycombinator.com/security.html">Security</a>
-        | <a href="https://news.ycombinator.com/lists">Lists</a>
-        | <a href="https://news.ycombinator.com/bookmarklet.html" rel="nofollow">Bookmarklet</a>
-        | <a href="http://www.ycombinator.com/legal/">Legal</a>
-        | <a href="http://www.ycombinator.com/apply/">Apply to YC</a>
-        | <a href="mailto:hn@ycombinator.com">Contact</a></span><br><br><form method="post" action="{% url 'newspost:search' %}">Search:
-          <input type="text" name="q" value="" size="17" autocorrect="off" spellcheck="false" autocapitalize="off" autocomplete="false"></form>
-            </center></td></tr>
-      </table></center></body><script type='text/javascript' src="{% static 'newspost/hnbee7.js'%}"></script>
 
-</html>
+{% endblock %}
+{% block javascript %}
+<script src="{% static 'js/newspost.js' %}"></script>
+{% endblock %}
