--- a/hackernews/newspost/templates/newspost/login.html
+++ b/hackernews/newspost/templates/newspost/login.html
@@ -39,6 +39,12 @@
         </div>
     </div>
     </script>
+<div class="container">
+     <div class="row justify-content-center">
+        <a href="{% url 'newspost:register1' %}"><br><h3>Register Here</h3>        </a>
+    </div>
+</div>
+
 </body>
 
 </html>
