--- a/hackernews/newspost/templates/newspost/register1.html
+++ b/hackernews/newspost/templates/newspost/register1.html
@@ -14,6 +14,11 @@
 </head>
 
 <body>
+        <div class="container">
+     <div class="row justify-content-center">
+        <a href="{% url 'newspost:login1' %}"><br><h3>Login if u already have an account</h3>        </a>
+    </div>
+</div>
      {% load crispy_forms_tags %}
     <div class="container">
         <div class="row justify-content-center">
@@ -34,6 +39,7 @@
         </div>
     </div>
     </script>
+
 </body>
 
 </html>
