--- a/hackernews/newspost/templates/newspost/allcomment.html
+++ b/hackernews/newspost/templates/newspost/allcomment.html
@@ -1,40 +1,56 @@
   {% extends "newspost/base.html" %}
 
+
 {% load static %}
 
 {% block content %}
 <tr id="pagespace" title="rishi news" style="height:10px"></tr><tr><td>
   <table border="0" class='comment-tree'>
         {% for comment in comments %}
-            {% for branch, obj in comment.as_tree %}
-                {% if obj %}
                         <tr class='athing comtr ' id='19803117'><td>
-            <table border='0'>  <tr>    <td class='ind'><img src="{% static 's.gif'%}" height="1" width="{% widthratio 40 1 obj.level_count %}"></td><td valign="top" class="votelinks"><center>
+            <table border='0' id='table{{ comment.id }}'>  <tr>    <td class='ind'><img src="{% static 'newspost/s.gif'%}" height="1" width="{% widthratio 40 1 comment.level_count %}"></td><td valign="top" class="votelinks"><center>
               {% if user.is_authenticated %}
-              <a id='up_19802558' href="{% url 'newspost:upvote_comment' obj.id %}" >
-              {% endif %}
-              <div class='votearrow' title='upvote'></div></a></center></td><td class="default"><div style="margin-top:2px; margin-bottom:-10px;"><span class="comhead">
-              <span class="score" id="score_19802558">{{ obj.comment_upvote.count }} points</span> by
-          <a href="https://news.ycombinator.com/user?id=darawk" class="hnuser">{{obj.user_id.username }}</a> <span class="age"><a href="https://news.ycombinator.com/item?id=19803117">{{ obj.timestamp }}</a></span> <span id="unv_19803117"></span><span class="par"></span> <a class="togg" n="8" href="javascript:void(0)" onclick="return toggle(event, 19803117)"></a>          <span class='storyon'></span>
+              <button type="submit" id="upvote{{ comment.id }}" class='votearrow' data-catid="{{ comment.id }}" value="{{ comment.id }}"></button>
+              {% endif %}</center></td><td class="default"><div style="margin-top:2px; margin-bottom:-10px;"><span class="comhead">
+              <span class="score" id="score_19802558">{{ comment.comment_upvote.count }} points</span> by
+          <a href="https://news.ycombinator.com/user?id=darawk" class="hnuser">{{comment.user_id.username }}</a> <span class="age"><a href="https://news.ycombinator.com/item?id=19803117">{{ comment.timestamp }}</a></span> <span id="unv_19803117"></span><span class="par"></span> <a class="togg" n="8" href="javascript:void(0)" onclick="return toggle(event, 19803117)"></a>          <span class='storyon'></span>
                   </span></div><br><div class="comment">
-                  <span class="commtext c00">{{ obj.text }}</span>
+                  <span class="commtext c00">{{ comment.text }}</span>
+                  {% if user.is_authenticated %}
               <div class='reply'>        <p><font size="1">
-                      <u><a href="{% url 'newspost:reply' obj.id %}">reply</a></u>
+                      <u><a href="" class='link' id="{{ comment.id}}">reply</a></u>
+                       <form method="POST" action ="{% url 'newspost:reply' %}" id='links{{comment.id}}' class='form_comment' data_commentid='{{ comment.id }}' style="display: none;" >
+          {% csrf_token %}
+          {{ form.as_p }}
+                <br><br><input type="submit" class ="submit1" id='{{ comment.id}}' value="Submit"></form>
                   </font>
-      </div></div></td></tr>
+                  <div class="form-group has-danger">
+                                    <div class="form-control-feedback" id='error{{ comment.id}}'></div>
+                                  </div>
+      </div></div>
+      {% else %}
+              <div class='reply'>        <p><font size="1">
+                      <u><a href="javascript:void(0)" class='link' id="{{ comment.id}}">reply</a></u>
+                       <form method="POST" action ="javascript:void(0)" id='links{{comment.id}}'  data_commentid='{{ comment.id }}' style="display: none;" >
+          {% csrf_token %}
+          {{ form.as_p }}
+                <br><br><input type="submit" value="Submit"></form>
+                  </font>
+                  <div class="form-group has-danger">
+                                    <div class="form-control-feedback" id='error{{ comment.id}}'></div>
+                                  </div>
+      </div></div>
+    {% endif %}</td></tr>
       </table></td></tr>
-                    {% if branch %}
-                    {% else %}
-                    {% endif %}
-                {% else %}
-                    {% if branch %}
-                    {% endif %}
-                {% endif %}
+
             {% endfor %}
-        {% endfor %}
-
-
               </table>
+
       <br><br>
   </td></tr>
 {% endblock %}
+{% block javascript %}
+<script src="{% static 'js/newspost.js' %}"></script>
+
+{% endblock %}
+
